schema/testdata/errors/flows_permission_attribute.keel
flow MyFlow1 {
    //expect-error:25:35:AttributeExpressionError:NoRoleName is not a role defined in your schema
    @permission(roles: [NoRoleName])
}

flow MyFlow2 {
    //expect-error:32:42:AttributeExpressionError:NoRoleName is not a role defined in your schema
    @permission(roles: [Admin, NoRoleName])
}

flow MyFlow3 {
    //expect-error:24:29:AttributeExpressionError:expression expected to resolve to type Role[] but it is Role
    @permission(roles: Admin)
}

flow MyFlow4 {
    //expect-error:17:24:AttributeArgumentError:unexpected argument for @permission
    //expect-error:5:16:AttributeArgumentError:@permission requires either the 'expressions' or 'roles' argument to be provided
    @permission([Admin])
}

role Admin {
}

role Developer {
}
